# sample-kolya-br-proxy

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  .semgrepignore  AGENTS.md  LICENSE  README.md  README.zh.md  build-and-push.sh  deploy-all.sh  deploy-to-existing.sh  destroy.sh  push-to-ecr.sh  pyproject.toml  semgrep-results.json  setup-precommit.sh  test-cache.json  test_bedrock_models.py
.github/workflows/: ci.yml  codeql.yml  security.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pytest.ini  run_dev.py  setup_dev.sh
backend/alembic/: env.py
backend/alembic/versions/: 0f4f689d9e69_initial_schema.py  7ce867a32c84_add_model_pricing_table.py  a1b2c3d4e5f6_add_cache_token_columns_to_usage.py  c3d4e5f6g7h8_add_pkce_to_oauth_state.py  d5e6f7g8h9i0_add_cached_price_to_model_pricing.py  e6f7g8h9i0j1_add_usage_records_composite_indexes.py  f7g8h9i0j1k2_add_spend_limits.py  h9i0j1k2l3m4_add_teams.py  j1k2l3m4n5o6_add_description_to_api_tokens.py  k2l3m4n5o6p7_add_rbac_fields.py  l3m4n5o6p7q8_set_superadmin.py  m4n5o6p7q8r9_fix_audit_enum_values.py  n5o6p7q8r9s0_fix_deleted_tokens_active_flag.py  p7q8r9s0t1u2_add_alert_tables.py  q8r9s0t1u2v3_add_alert_audit_actions.py  r9s0t1u2v3w4_alert_rules_fk_cascade.py  s0t1u2v3w4x5_add_team_member_audit_actions.py  t1u2v3w4x5y6_add_entra_group_mappings.py  u2v3w4x5y6z7_add_data_management_audit_actions.py  v3w4x5y6z7a8_add_notify_emails_to_api_tokens.py  w4x5y6z7a8b9_add_usage_records_perf_indexes.py
backend/app/: __init__.py
backend/app/api/: __init__.py  deps.py  health.py
backend/app/core/: config.py  config_sync.py  cookies.py  database.py  json_formatter.py  log_context.py  metrics.py  redis.py  security.py  tracing.py
backend/app/middleware/: observability.py  security.py
backend/app/models/: __init__.py  alert.py  audit_log.py  entra_group_mapping.py  model.py  model_pricing.py  oauth_state.py  refresh_token.py  system_config.py  token.py  usage.py  user.py
backend/app/schemas/: __init__.py  anthropic.py  bedrock.py  openai.py
backend/app/services/: alert.py  anthropic_translator.py  audit_log.py  auth.py  background_tasks.py  bedrock.py  builtin_tools.py  cognito_oauth.py  data_management.py  entra_group_sync.py  gemini_client.py  gemini_pricing_updater.py  mantle_client.py  mantle_models.py  mantle_signing.py  microsoft_oauth.py  notification.py  oauth.py  pricing.py  pricing_updater.py  quota.py  refresh_token.py  team.py  token.py  token_cache.py  tool_execution.py  trace_store.py  translator.py  usage_stats.py  web_search.py
backend/app/tasks/: pricing_tasks.py
backend/scripts/: clear_all_tables.sh  clear_pricing_cache.sh  migrate.py  test_alembic.py  test_config.py
backend/tests/: __init__.py  conftest.py  test_builtin_tools.py  test_json_formatter.py  test_mantle_registry.py  test_metrics.py  test_pricing.py  test_prompt_cache_injection.py  test_quota_enforcement.py  test_stream_failover.py  test_usage_recording.py
benchmark/: README.md  config.py  locustfile.py  prompts.py  sse_client.py
benchmark/configs/: staging.env
benchmark/results/: openai_stats.csv  openai_stats_history.csv
docs/: alerts.md  alerts.zh.md  api-reference.md  api-reference.zh.md  architecture.md  architecture.zh.md  cognito-admin-guide.md  cognito-admin-guide.zh.md  deployment.md  deployment.zh.md  kolya_ask.md  kolya_ask.zh.md  oauth-setup.md  oauth-setup.zh.md  observability.md  observability.zh.md  performance.md  performance.zh.md  pricing-system.md  pricing-system.zh.md  prompt-caching.md  prompt-caching.zh.md  request-translation.md  request-translation.zh.md  security.md  security.zh.md  testing-guide.md  testing-guide.zh.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  quasar.config.ts
frontend/src/: App.vue
frontend/src/boot/: axios.ts
frontend/src/components/: DataManagementCard.vue  PermissionEditor.vue
frontend/src/css/: app.scss
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: ActivityPage.vue  AdminUsersPage.vue  CognitoCallbackPage.vue  DashboardPage.vue  EntraGroupsPage.vue  LoginPage.vue  MicrosoftCallbackPage.vue  ModelsPage.vue  MonitorPage.vue  PlaygroundPage.vue  SettingsPage.vue  TeamsPage.vue  TokensPage.vue  TracesPage.vue
frontend/src/router/: index.ts  (+1 more)
functional_tests/: test_effort_levels.py  test_openai_compatible.py
iac/: README.md  init-backend.sh  main.tf  outputs.tf  providers.tf.template  terraform.tfvars.cognito.example  variables.tf
iac-612674025488-us-west-2/: README.md  generate_tfvars.sh  main.tf  outputs.tf  providers.tf  variables.tf
k8s/: README.md  cleanup-app.sh  deploy.sh
k8s/application/: README.md  backend-configmap.yaml.template  backend-deployment.yaml  backend-deployment.yaml.template  backend-service.yaml  external-secret.yaml.template  frontend-configmap.yaml.template  frontend-deployment.yaml  frontend-deployment.yaml.template  frontend-service.yaml  generate-ingress.sh  hpa-backend.yaml  hpa-backend.yaml.template  hpa-frontend.yaml  hpa-frontend.yaml.template  ingress-api.yaml.template  ingress-frontend.yaml.template  namespace.yaml  searxng-deployment.yaml  secrets.yaml.template
k8s/infrastructure/: README.md
kolya-br-proxy-arch/: bundle.html  index.html  package.json  pnpm-lock.yaml
kolya-br-proxy-arch/.parcel-cache/: 0069b0ac7e38cb17-AssetGraph  6f504d967087550b-BundleGraph  b268cf1f67e7290d-RequestGraph  data.mdb  lock.mdb  snapshot-b268cf1f67e7290d.txt
kolya-br-proxy-arch/src/: App.tsx
(+92 files in other folders)
