[project]
name = "kolya-br-proxy"
version = "0.2.0"
description = "AI Gateway Proxy infrastructure and application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # AWS SDK
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "aioboto3>=13.0.0",
    "aiobotocore>=2.11.0",
    # Authentication and security
    "PyJWT>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "python-multipart>=0.0.22",
    # HTTP client
    "httpx>=0.25.0",
    # Background tasks
    "apscheduler>=3.10.0",
    # Email
    "aiosmtplib>=3.0.0",
    "jinja2>=3.1.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "email-validator>=2.3.0",
    "openai>=2.21.0",
    "redis[hiredis]>=5.0.0",
    "aiohttp>=3.13.4",
    "urllib3>=2.6.3",
    "cryptography>=46.0.5",
    "requests>=2.33.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "detect-secrets>=1.5.0",
    "gitpython>=3.1.0",
    "ruff>=0.8.4",
    # Testing
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
    # Code analysis (heavy, dev-only)
    "semgrep>=1.156.0",
    "virtualenv>=20.36.1",
    "filelock>=3.20.3",
    "pyasn1>=0.6.3",
]
