[project]
name = "kolya-br-proxy"
version = "0.2.0"
description = "AI Gateway Proxy infrastructure and application"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    # FastAPI and web framework
    "fastapi>=0.104.0",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # AWS SDK
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "aioboto3>=13.0.0",
    "aiobotocore>=2.11.0",
    # Authentication and security
    "PyJWT>=2.13.0",  # 2.13.0 fixes PYSEC-2026-175/177/178/179
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.2.0,<4.0.0",
    "python-multipart>=0.0.31",
    # HTTP client
    "httpx>=0.25.0",
    # Google Cloud (Vertex AI Gemini)
    "google-auth>=2.25.0",
    # Background tasks
    "apscheduler>=3.10.0",
    # Email
    "aiosmtplib>=5.1.1",
    "jinja2>=3.1.0",
    # Utilities
    "python-dotenv>=1.2.2",
    "email-validator>=2.3.0",
    "openai>=2.21.0",
    "redis[hiredis]>=5.0.0",
    "aiohttp>=3.14.1",
    "urllib3>=2.7.0",
    "cryptography>=48.0.1",
    "requests>=2.33.0",
    # Observability
    "aws-embedded-metrics>=3.2.0",
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-propagator-aws-xray>=1.0.0",
    "opentelemetry-sdk-extension-aws>=2.0.0",
]

[tool.uv]
# semgrep (dev-only) pins click~=8.1.8, which drags the whole lockfile onto a
# version with PYSEC-2026-2132 (fixed in 8.3.3) and fails pip-audit. Override
# within the same major version; semgrep's CLI works fine on click 8.3.
override-dependencies = ["click>=8.3.3,<9"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "detect-secrets>=1.5.0",
    "gitpython>=3.1.50",
    "ruff>=0.8.4",
    # Testing
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "aiosqlite>=0.22.1",
    # Code analysis (heavy, dev-only)
    "semgrep>=1.156.0",
    "virtualenv>=20.36.1",
    "filelock>=3.20.3",
    "pyasn1>=0.6.3",
    # Benchmark
    "locust>=2.29.0",
]
